ajout de la paritie get todo by id

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#configuration
+http-client.env.json
+test.http
